fixed broken resume link in header by importing the file directly to the Component. Fixed SeconSection Component layout by adding some CSS to fix broken spacing for project  cards.

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -173,8 +173,13 @@ hr {
   border: solid 1px rgb(0, 0, 0);
   color: white;
 }
+
 .icon-spacer {
   margin-left: 3px;
+}
+.work-examples > div {
+  padding-left: 0;
+  padding-right: 0;
 }
 #work-example-1 {
   height: 200px;
